--- a/User/css/style.css
+++ b/User/css/style.css
@@ -19,6 +19,28 @@ th{
 .entry{
    padding-top: 4%;
 }
+.img-2fa{
+   margin-top: 10%;
+   align-items: center;
+   justify-content: center;
+   display: flex;
+}
+.content-2fa{
+   width:30%;
+   margin: auto;
+   align-content: center;
+}
+input.btn.pink.darken-4.btn-2fa {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.content-2fa-login{
+   margin: auto;
+   width:30%;
+   margin-top: 15%;
+   align-content: center;
+}
 /* .carousel{
 
 position: absolute;
